TravelerBot - avoidance + expedition